# ML-001

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  CNN.h  MNISTDataset.cpp  MNISTDataset.h  main.cpp
src/mllogic/: CMakeLists.txt  CNN.cpp  DataExport.h  GenericDataset.h  Logger.cpp  Logger.h  Logger.hpp  MNISTDataset.h  ModelTrainer.h  utils.hpp
test/: CMakeLists.txt
